logs/neg/t6436-neg.log
t6436.scala:8: error: type mismatch;
 found   : StringContext
 required: ?
Note that implicit conversions are not applicable because they are ambiguous:
 both method foo1 in object quasiquotes of type (ctx: StringContext)AnyRef
 and method foo2 in object quasiquotes of type (ctx: StringContext)AnyRef
 are possible conversion functions from StringContext to ?
  println(q"a")
          ^
one error found
